--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container content-wrapper">
 
     <div class="jumbotron-fluid jumbotron">
       <div class="container">
