--- a/house-data.html
+++ b/house-data.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container content-wrapper">
 
     <div class="jumbotron-fluid jumbotron">
       <div class="container">
@@ -23,7 +23,7 @@
             <p class="lead">Transparent Government in Facts</p>
           </div>
           <div class="col-sm text-right">
-            <img class="jumbotron-img" src="./img/house-seal.png" alt="capitol-logo">
+            <img class="jumbotron-img" src="./img/house-seal.png" alt="house-logo">
           </div>
         </div>
       </div>
