All pages styled

--- a/home.html
+++ b/home.html
@@ -8,22 +8,22 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="./dist/style.css">
+  <link rel="stylesheet" href="./CSS/style.css">
   <title>Welcome to TGIF!</title>
 </head>
 
 <body>
-  <div class="container content-wrapper">
+  <div class="container col-xl-9 col-lg-12 col-md-12 col-sm-12 p-0">
 
     <div class="jumbotron-fluid jumbotron">
       <div class="container">
         <div class="row">
-          <div class="col-sm welcome">
+          <div class="col-md-6 welcome">
             <h1 class="display-4">Welcome to TGIF!</h1>
             <p class="lead">Transparent Government in Facts</p>
           </div>
-          <div class="col-sm text-right">
-            <img class="jumbotron-img" src="./img/capitol-topper.gif" alt="capitol-logo">
+          <div class="col-md-6 text-right">
+            <img class="jumbotron-home-img" src="./img/capitol-topper.gif" alt="capitol-logo">
           </div>
         </div>
       </div>
