--- a/senate-loyalty.html
+++ b/senate-loyalty.html
@@ -8,13 +8,13 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="./dist/style.css">
+  <link rel="stylesheet" href="./CSS/style.css">
   <title>Senate Loyalty</title>
 </head>
 
 <body>
 
-  <div class="container content-wrapper">
+  <div class="container col-xl-9 col-lg-12 col-md-12 col-sm-12 p-0">
 
     <div class="jumbotron-fluid jumbotron">
       <div class="container">
@@ -76,8 +76,8 @@
     </nav>
 
     <div class="card" style="border: none; border-radius: 0;">
-      <div class="row no-gutters">
-        <div class="col-md-6 p-5">
+      <div class="row">
+        <div class="col-xl-6 p-5">
           <h5 class="card-title pb-3">Party Loyalty</h5>
           <p>
             Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively,
@@ -91,7 +91,7 @@
           </p>
         </div>
 
-        <div class="col-md-6 p-5">
+        <div class="col-xl-6 p-5">
           <h5>Senate at Glace</h5>
           <div class="table-responsive">
             <table id="house-attendance-table" class="table table-striped">
@@ -111,9 +111,9 @@
       </div>
     </div>
 
-    <div class="card" style="border: none; border-radius: 0;">
+    <div class="card members-tbl" style="border: none; border-radius: 0;">
       <div class="row no-gutters">
-        <div class="col-md-6 pr-3">
+        <div class="col-xl-6">
           <h5 class="pl-3">Least Loyal 10%</h5>
           <div class="table-responsive">
             <table id="senate-engaged-table" class="table table-striped">
@@ -129,7 +129,7 @@
             </table>
           </div>
         </div>
-        <div class="col-md-6 p-0">
+        <div class="col-xl-6 p-0">
           <h5 class="pl-3">Most Loyal 10%</h5>
           <div class="table-responsive">
             <table id="senate-engaged-table" class="table table-striped">
