--- a/house-data.html
+++ b/house-data.html
@@ -74,46 +74,56 @@
       </div>
     </nav>
 
-    <div class="card" style="border: none; border-radius: 0;">
-      <div class="row no-gutters">
-        <div class="container">
-          <div class="card-body col-md-12">
-            <h5 class="card-title pb-3">Representatives</h5>
-            <p class="card-text">The United States House of Representatives is the lower house of the United States
-              Congress, the Senate being the upper house. Together they compose the national legislature of the United
-              States.
-              <br><br>
-              The composition of the House is established by Article One of the United States Constitution. The House is
-              composed of representatives who sit in congressional districts that are allocated to each of the 50 states
-              on a basis of population as measured by the U.S. Census, with each district entitled to one
-              representative. Since its inception in 1789, all representatives have been directly elected. The total
-              number of voting representatives is fixed by law at 435. As of the 2010 Census, the largest delegation
-              is that of California, with fifty-three representatives. Seven states have only one representative:
-              Alaska, Delaware, Montana, North Dakota, South Dakota, Vermont, and Wyoming.</p>
-            <p class="card-text"><a class="btn btn-outline-dark" data-toggle="collapse" href="#multiCollapseExample1"
-                role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Read more</a></p>
-            <div class="row">
-              <div class="col-md-12">
-                <div class="collapse multi-collapse" id="multiCollapseExample1">
-                  <div class="card card-body p-0 mt-2" style="border: none;">
-                    The House is charged with the passage of federal legislation, known as bills, which, after
-                    concurrence by
-                    the Senate, are sent to the president for consideration. In addition to this basic power, the House
-                    has
-                    certain exclusive powers, among them the power to initiate all bills related to revenue; the
-                    impeachment
-                    of federal officers, who are sent to trial before the Senate; and, in cases wherein no candidate
-                    receives
-                    a majority of electors for president, the duty falls upon the House to elect one of the top three
-                    recipients of electors for that office, with one vote given to each state for that purpose. The
-                    House meets in the south wing of the United States Capitol.
-                    <br><br>
-                    The presiding officer is the speaker of the House, who is elected by the members thereof (and is
-                    therefore
-                    traditionally the leader of the controlling party). The speaker and other floor leaders are chosen
-                    by the
-                    Democratic Caucus or the Republican Conference, depending on whichever party has more voting
-                    members.
+    <!-- <div id="loader"></div> -->
+    <div class="spinner-grow" role="status" id="loader">
+      <span class="sr-only">Loading...</span>
+    </div>
+
+    <div style="display:none;" id="data-tables" class="animate-bottom">
+      <div class="card" style="border: none; border-radius: 0;">
+        <div class="row no-gutters">
+          <div class="container">
+            <div class="card-body col-md-12">
+              <h5 class="card-title pb-3">Representatives</h5>
+              <p class="card-text">The United States House of Representatives is the lower house of the United States
+                Congress, the Senate being the upper house. Together they compose the national legislature of the United
+                States.
+                <br><br>
+                The composition of the House is established by Article One of the United States Constitution. The House
+                is
+                composed of representatives who sit in congressional districts that are allocated to each of the 50
+                states
+                on a basis of population as measured by the U.S. Census, with each district entitled to one
+                representative. Since its inception in 1789, all representatives have been directly elected. The total
+                number of voting representatives is fixed by law at 435. As of the 2010 Census, the largest delegation
+                is that of California, with fifty-three representatives. Seven states have only one representative:
+                Alaska, Delaware, Montana, North Dakota, South Dakota, Vermont, and Wyoming.</p>
+              <p class="card-text"><a class="btn btn-outline-dark" data-toggle="collapse" href="#multiCollapseExample1"
+                  role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Read more</a></p>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="collapse multi-collapse" id="multiCollapseExample1">
+                    <div class="card card-body p-0 mt-2" style="border: none;">
+                      The House is charged with the passage of federal legislation, known as bills, which, after
+                      concurrence by
+                      the Senate, are sent to the president for consideration. In addition to this basic power, the
+                      House
+                      has
+                      certain exclusive powers, among them the power to initiate all bills related to revenue; the
+                      impeachment
+                      of federal officers, who are sent to trial before the Senate; and, in cases wherein no candidate
+                      receives
+                      a majority of electors for president, the duty falls upon the House to elect one of the top three
+                      recipients of electors for that office, with one vote given to each state for that purpose. The
+                      House meets in the south wing of the United States Capitol.
+                      <br><br>
+                      The presiding officer is the speaker of the House, who is elected by the members thereof (and is
+                      therefore
+                      traditionally the leader of the controlling party). The speaker and other floor leaders are chosen
+                      by the
+                      Democratic Caucus or the Republican Conference, depending on whichever party has more voting
+                      members.
+                    </div>
                   </div>
                 </div>
               </div>
@@ -121,50 +131,61 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="members-tbl col-md-12">
-      <div class="table-responsive">
-        <h2>Party Affiliation</h2>
-        <div class="table-filters">
-          <span style="font-weight: bold;">Party:</span>
-          <input type="checkbox" name="Republicans" value="R" class="checkbox" checked> Republicans
-          <input type="checkbox" name="Democrats" value="D" class="checkbox" checked> Democrats
-          <input type="checkbox" name="Independent" value="I" class="checkbox" checked> Independent
-          <span style="font-weight: bold;"> | State:</span>
-          <select id="table-state-select">
-            <option value="All">All</option>
-          </select>
+      <div class="members-tbl col-md-12">
+        <div class="table-responsive">
+          <h2>Party Affiliation</h2>
+          <div class="table-filters">
+            <span style="font-weight: bold;">Party:</span>
+            <input type="checkbox" name="Republicans" value="R" class="checkbox" checked> Republicans
+            <input type="checkbox" name="Democrats" value="D" class="checkbox" checked> Democrats
+            <input type="checkbox" name="Independent" value="I" class="checkbox" checked> Independent
+            <span style="font-weight: bold;"> | State:</span>
+            <select id="table-state-select">
+              <option value="All">All</option>
+            </select>
+          </div>
+          <br>
+          <div class="table-length"></div>
+          <table id="house-table" class="table table-striped">
+            <caption>List of Representatives</caption>
+            <thead class="thead-dark">
+              <tr>
+                <th>Full Name</th>
+                <th>Party Affiliation</th>
+                <th>State</th>
+                <th>Years in Office</th>
+                <th>Percentage of votes</th>
+              </tr>
+            </thead>
+            <tbody class="members-table_tbody"></tbody>
+          </table>
         </div>
-        <br>
-        <div class="table-length"></div>
-        <table id="house-table" class="table table-striped">
-          <caption>List of Representatives</caption>
-          <thead class="thead-dark">
-            <tr>
-              <th>Full Name</th>
-              <th>Party Affiliation</th>
-              <th>State</th>
-              <th>Years in Office</th>
-              <th>Percentage of votes</th>
-            </tr>
-          </thead>
-          <tbody class="members-table_tbody"></tbody>
-        </table>
       </div>
     </div>
 
+  </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
-    <script src="./JS/app.js" type="module"></script>
+  <!-- <script>
+    function toggleLoader() {
+      let timeOut = setTimeout(showPage, 1500);
+    }
+    function showPage() {
+      document.getElementById("loader").style.display = "none";
+      document.getElementById("data-tables").style.display = "block";
+    }
+  </script> -->
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script src="./JS/app.js" type="module"></script>
 </body>
 
 </html>
