--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -75,75 +75,84 @@
       </div>
     </nav>
 
-    <div class="card" style="border: none; border-radius: 0;">
-      <div class="row">
-        <div class="col-xl-6 p-5">
-          <h5 class="card-title pb-3">Attendance</h5>
-          <p>
-            The Constitution specifies that a majority of members constitutes a quorum to do business in each house.
-            Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most
-            cases, debates continue even if a majority is not present.
+    <!-- <div id="loader"></div> -->
+    <div class="spinner-grow" role="status" id="loader">
+      <span class="sr-only">Loading...</span>
+    </div>
 
-            The House uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye"
-            or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters,
-            as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic
-            device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if
-            present) cast the tiebreaking vote.
-          </p>
-        </div>
+    <div style="display:none;" id="data-tables" class="animate-bottom">
+      <div class="card" style="border: none; border-radius: 0;">
+        <div class="row">
+          <div class="col-xl-6 p-5">
+            <h5 class="card-title pb-3">Attendance</h5>
+            <p>
+              The Constitution specifies that a majority of members constitutes a quorum to do business in each house.
+              Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in
+              most
+              cases, debates continue even if a majority is not present.
 
-        <div class="col-xl-6 p-5">
-          <h5>Senate at Glace</h5>
-          <div class="table-responsive">
-            <table id="house-attendance-table" class="table table-striped">
-              <caption>Senate at Glace</caption>
-              <thead class="thead-dark">
-                <tr>
-                  <th>Party</th>
-                  <th>Number of Reps</th>
-                  <th>% Voted with Party</th>
-                </tr>
-              </thead>
-              <tbody class="attendance-table_tbody">
-              </tbody>
-            </table>
+              The House uses roll-call votes; a clerk calls out the names of all the senators, each senator stating
+              "aye"
+              or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters,
+              as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic
+              device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if
+              present) cast the tiebreaking vote.
+            </p>
+          </div>
+
+          <div class="col-xl-6 p-5">
+            <h5>Senate at Glace</h5>
+            <div class="table-responsive">
+              <table id="house-attendance-table" class="table table-striped">
+                <caption>Senate at Glace</caption>
+                <thead class="thead-dark">
+                  <tr>
+                    <th>Party</th>
+                    <th>Number of Reps</th>
+                    <th>% Voted with Party</th>
+                  </tr>
+                </thead>
+                <tbody class="attendance-table_tbody">
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="card members-tbl" style="border: none; border-radius: 0;">
-      <div class="row no-gutters">
-        <div class="col-xl-6">
-          <h5 class="pl-3">Least Engaged 10%</h5>
-          <div class="table-responsive">
-            <table id="senate-engaged-table" class="table table-striped">
-              <caption class="pl-3">Least Engaged Senators</caption>
-              <thead class="thead-dark">
-                <tr>
-                  <th>Name</th>
-                  <th>Number of Missed Votes</th>
-                  <th>% Missed</th>
-                </tr>
-              </thead>
-              <tbody class="least-table_tbody"></tbody>
-            </table>
+      <div class="card members-tbl" style="border: none; border-radius: 0;">
+        <div class="row no-gutters">
+          <div class="col-xl-6">
+            <h5 class="pl-3">Least Engaged 10%</h5>
+            <div class="table-responsive">
+              <table id="senate-engaged-table" class="table table-striped">
+                <caption class="pl-3">Least Engaged Senators</caption>
+                <thead class="thead-dark">
+                  <tr>
+                    <th>Name</th>
+                    <th>Number of Missed Votes</th>
+                    <th>% Missed</th>
+                  </tr>
+                </thead>
+                <tbody class="least-table_tbody"></tbody>
+              </table>
+            </div>
           </div>
-        </div>
-        <div class="col-xl-6 p-0">
-          <h5 class="pl-3">Most Engeged 10%</h5>
-          <div class="table-responsive">
-            <table id="senate-engaged-table" class="table table-striped">
-              <caption class="pl-3">Most Engaged Senators</caption>
-              <thead class="thead-dark">
-                <tr>
-                  <th>Name</th>
-                  <th>Number of Missed Votes</th>
-                  <th>% Missed</th>
-                </tr>
-              </thead>
-              <tbody class="most-table_tbody"></tbody>
-            </table>
+          <div class="col-xl-6 p-0">
+            <h5 class="pl-3">Most Engeged 10%</h5>
+            <div class="table-responsive">
+              <table id="senate-engaged-table" class="table table-striped">
+                <caption class="pl-3">Most Engaged Senators</caption>
+                <thead class="thead-dark">
+                  <tr>
+                    <th>Name</th>
+                    <th>Number of Missed Votes</th>
+                    <th>% Missed</th>
+                  </tr>
+                </thead>
+                <tbody class="most-table_tbody"></tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
