--- a/senate-data.html
+++ b/senate-data.html
@@ -74,44 +74,53 @@
       </div>
     </nav>
 
-    <div class="card" style="border: none; border-radius: 0;">
-      <div class="row no-gutters">
-        <div class="container">
-          <div class="card-body">
-            <h5 class="card-title pb-3">Senate</h5>
-            <p class="card-text">The United States Senate is the upper chamber of the United States Congress which,
-              along with the United States House of Representatives—the lower chamber—comprises the legislature of the
-              United States. The Senate chamber is located in the north wing of the Capitol Building, in Washington,
-              D.C.
-              <br><br>
-              The composition and powers of the Senate are established by Article One of the United States
-              Constitution. The Senate is composed of senators, each of whom represents a single state in its
-              entirety. Each state, regardless of its population size, is equally represented by two senators who serve
-              staggered terms of six years. There being at present 50 states in the Union, there are currently 100
-              senators. From 1789 to 1913, senators were appointed by legislatures of the states they represented; they
-              are now elected by popular vote, following the ratification of the Seventeenth Amendment in 1913.</p>
-            <p class="card-text"><a class="btn btn-outline-dark" data-toggle="collapse" href="#multiCollapseExample1"
-                role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Read more</a></p>
-            <div class="row">
-              <div class="col-md-12">
-                <div class="collapse multi-collapse" id="multiCollapseExample1">
-                  <div class="card card-body p-0 mt-2" style="border: none;">
-                    As the upper chamber of Congress, the Senate has several powers of advice and consent which are
-                    unique to it. These include the approval of treaties, and the confirmation of Cabinet secretaries,
-                    Supreme Court justices, federal judges, flag officers, regulatory officials, ambassadors, other
-                    federal executive officials and other federal uniformed officers. In addition to these, in cases
-                    wherein no candidate receives a majority of electors for vice president, the duty falls to the
-                    Senate to elect one of the top two recipients of electors for that office. Furthermore, the Senate
-                    has the responsibility of conducting the trials of those impeached by the House.
-                    <br><br>
-                    The Senate is widely considered both a more deliberative and more prestigious body than
-                    the House of Representatives due to its longer terms, smaller size, and statewide constituencies,
-                    which historically led to a more collegial and less partisan atmosphere. The presiding officer of
-                    the Senate is the vice president of the United States, who is president of the Senate. In the vice
-                    president's absence, the president pro tempore, who is customarily the senior member of the party
-                    holding a majority of seats, presides over the Senate. In the early 20th century, the practice of
-                    majority and minority parties electing their floor leaders began, although they are not
-                    constitutional officers.
+    <!-- <div id="loader"></div> -->
+    <div class="spinner-grow" role="status" id="loader">
+      <span class="sr-only">Loading...</span>
+    </div>
+
+    <div style="display:none;" id="data-tables" class="animate-bottom">
+      <div class="card" style="border: none; border-radius: 0;">
+        <div class="row no-gutters">
+          <div class="container">
+            <div class="card-body">
+              <h5 class="card-title pb-3">Senate</h5>
+              <p class="card-text">The United States Senate is the upper chamber of the United States Congress which,
+                along with the United States House of Representatives—the lower chamber—comprises the legislature of the
+                United States. The Senate chamber is located in the north wing of the Capitol Building, in Washington,
+                D.C.
+                <br><br>
+                The composition and powers of the Senate are established by Article One of the United States
+                Constitution. The Senate is composed of senators, each of whom represents a single state in its
+                entirety. Each state, regardless of its population size, is equally represented by two senators who
+                serve
+                staggered terms of six years. There being at present 50 states in the Union, there are currently 100
+                senators. From 1789 to 1913, senators were appointed by legislatures of the states they represented;
+                they
+                are now elected by popular vote, following the ratification of the Seventeenth Amendment in 1913.</p>
+              <p class="card-text"><a class="btn btn-outline-dark" data-toggle="collapse" href="#multiCollapseExample1"
+                  role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Read more</a></p>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="collapse multi-collapse" id="multiCollapseExample1">
+                    <div class="card card-body p-0 mt-2" style="border: none;">
+                      As the upper chamber of Congress, the Senate has several powers of advice and consent which are
+                      unique to it. These include the approval of treaties, and the confirmation of Cabinet secretaries,
+                      Supreme Court justices, federal judges, flag officers, regulatory officials, ambassadors, other
+                      federal executive officials and other federal uniformed officers. In addition to these, in cases
+                      wherein no candidate receives a majority of electors for vice president, the duty falls to the
+                      Senate to elect one of the top two recipients of electors for that office. Furthermore, the Senate
+                      has the responsibility of conducting the trials of those impeached by the House.
+                      <br><br>
+                      The Senate is widely considered both a more deliberative and more prestigious body than
+                      the House of Representatives due to its longer terms, smaller size, and statewide constituencies,
+                      which historically led to a more collegial and less partisan atmosphere. The presiding officer of
+                      the Senate is the vice president of the United States, who is president of the Senate. In the vice
+                      president's absence, the president pro tempore, who is customarily the senior member of the party
+                      holding a majority of seats, presides over the Senate. In the early 20th century, the practice of
+                      majority and minority parties electing their floor leaders began, although they are not
+                      constitutional officers.
+                    </div>
                   </div>
                 </div>
               </div>
@@ -119,36 +128,37 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="members-tbl col-md-12">
-      <div class="table-responsive">
-        <h2>Party Affiliation</h2>
-        <div class="table-filters">
-          <span style="font-weight: bold;">Party:</span>
-          <input type="checkbox" name="Republicans" value="R" class="checkbox" checked> Republicans
-          <input type="checkbox" name="Democrats" value="D" class="checkbox" checked> Democrats
-          <input type="checkbox" name="Independent" value="I" class="checkbox" checked> Independent
-          <span style="font-weight: bold;"> | State:</span>
-          <select id="table-state-select">
-            <option value="All">All</option>
-          </select>
+
+      <div class="members-tbl col-md-12">
+        <div class="table-responsive">
+          <h2>Party Affiliation</h2>
+          <div class="table-filters">
+            <span style="font-weight: bold;">Party:</span>
+            <input type="checkbox" name="Republicans" value="R" class="checkbox" checked> Republicans
+            <input type="checkbox" name="Democrats" value="D" class="checkbox" checked> Democrats
+            <input type="checkbox" name="Independent" value="I" class="checkbox" checked> Independent
+            <span style="font-weight: bold;"> | State:</span>
+            <select id="table-state-select">
+              <option value="All">All</option>
+            </select>
+          </div>
+          <br>
+          <div class="table-length"></div>
+          <table id="house-table" class="table table-striped">
+            <caption>List of Senators</caption>
+            <thead class="thead-dark">
+              <tr>
+                <th>Full Name</th>
+                <th>Party Affiliation</th>
+                <th>State</th>
+                <th>Years in Office</th>
+                <th>Percentage of votes</th>
+              </tr>
+            </thead>
+            <tbody class="members-table_tbody"></tbody>
+          </table>
         </div>
-        <br>
-        <div class="table-length"></div>
-        <table id="house-table" class="table table-striped">
-          <caption>List of Senators</caption>
-          <thead class="thead-dark">
-            <tr>
-              <th>Full Name</th>
-              <th>Party Affiliation</th>
-              <th>State</th>
-              <th>Years in Office</th>
-              <th>Percentage of votes</th>
-            </tr>
-          </thead>
-          <tbody class="members-table_tbody"></tbody>
-        </table>
       </div>
     </div>
 
