--- a/house-attendance.html
+++ b/house-attendance.html
@@ -44,7 +44,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Congress 115
+              Congress <span class="congressNo"></span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="./house-data.html">House</a>
@@ -126,7 +126,7 @@
             <h5 class="pl-3">Least Engaged 10%</h5>
             <div class="table-responsive">
               <table id="senate-engaged-table" class="table table-striped">
-                <caption class="pl-3">Least Engaged Representatives</caption>
+                <caption class="pl-3">Least Engaged Representatives | <a href="#">Go to top</a></caption>
                 <thead class="thead-dark">
                   <tr>
                     <th>Name</th>
@@ -142,7 +142,7 @@
             <h5 class="pl-5">Most Engeged 10%</h5>
             <div class="table-responsive">
               <table id="senate-engaged-table" class="table table-striped">
-                <caption class="pl-3">Most Engaged Representatives</caption>
+                <caption class="pl-3">Most Engaged Representatives | <a href="#">Go to top</a></caption>
                 <thead class="thead-dark">
                   <tr>
                     <th>Name</th>
