--- a/house-data.html
+++ b/house-data.html
@@ -43,7 +43,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Congress 115
+              Congress <span class="congressNo"></span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="#">House</a>
@@ -148,7 +148,7 @@
           <br>
           <div class="table-length"></div>
           <table id="house-table" class="table table-striped">
-            <caption>List of Representatives</caption>
+            <caption>List of Representatives | <a href="#">Go to top</a></caption>
             <thead class="thead-dark">
               <tr>
                 <th>Full Name</th>
