--- a/house-loyalty.html
+++ b/house-loyalty.html
@@ -44,7 +44,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Congress 115
+              Congress <span class="congressNo"></span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="./house-data.html">House</a>
@@ -125,7 +125,7 @@
             <h5 class="pl-3">Least Loyal 10%</h5>
             <div class="table-responsive">
               <table id="senate-engaged-table" class="table table-striped">
-                <caption class="pl-3">Representatives Least Loyal to Their Party</caption>
+                <caption class="pl-3">Representatives Least Loyal to Their Party | <a href="#">Go to top</a></caption>
                 <thead class="thead-dark">
                   <tr>
                     <th>Name</th>
@@ -141,7 +141,7 @@
             <h5 class="pl-3">Most Loyal 10%</h5>
             <div class="table-responsive">
               <table id="senate-engaged-table" class="table table-striped">
-                <caption class="pl-3">Representatives Most Loyal to Their Party</caption>
+                <caption class="pl-3">Representatives Most Loyal to Their Party | <a href="#">Go to top</a></caption>
                 <thead class="thead-dark">
                   <tr>
                     <th>Name</th>
